syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.maurigvs.bank.grpc";
option java_outer_classname = "BankProto";

package grpc;

service CustomerService {
    rpc FindByTaxId(FindCustomerRequest) returns (FindCustomerReply);
}

message CustomerData {
    int64 id = 1;
    string tax_id = 2;
}

message FindCustomerRequest {
    int64 id = 1;
    string tax_id = 2;
}

message FindCustomerReply {
    CustomerData customer_data = 1;
}

service AccountService {
    rpc FindById(FindAccountRequest) returns (FindAccountReply);
    rpc UpdateBalance(UpdateBalanceRequest) returns (UpdateBalanceReply);
}

message AccountData {
    int64 id = 1;
    double balance = 2;
    CustomerData customer_data = 3;
}

message FindAccountRequest {
    int64 id = 1;
}

message FindAccountReply {
    AccountData account_data = 1;
}

message UpdateBalanceRequest {
    int64 account_id = 1;
    double transaction_amount = 2;
}

message UpdateBalanceReply {
    double balance = 1;
}